# linux-webauthn-platform-api

./: .gitignore  Cargo.toml  README.md  credential-landscape.odg  design-doc.md  ecosystem.md  main.py  meson.build  meson_options.txt  private-key1.pem  private-key1.pk8  webauthn.h  xyz.iinuwa.credentials.CredentialManager.xml
.github/workflows/: main.yml
backend/: Cargo.toml  README.md  build.rs
backend/resources/: custom.css  device_chooser.blp  device_chooser.ui  resources.gresource.xml  window.blp  window.ui
backend/src/: main.rs
backend/src/portal/: mod.rs
backend/src/portal/frontend/: mod.rs
backend/src/views/: mod.rs
backend/src/views/device_chooser/: imp.rs  mod.rs
backend/src/window/: imp.rs  mod.rs
build-aux/: xyz.iinuwa.CredentialManager.Devel.json
contrib/: rsa-2048-private-key.pk8
demo_client/: main.py  xyz.iinuwa.credentials.CredentialManager.xml
doc/: api.md  ecosystem.md  scenarios.md  xyz.iinuwa.credentials.CredentialManager.xml
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/dbus/: mod.rs
frontend/src/store/: mod.rs
frontend/src/webauthn/: mod.rs
frontend/src/webauthn/cbor/: mod.rs
src/: main.rs
src/dbus/: mod.rs
src/store/: mod.rs
src/webauthn/: mod.rs
src/webauthn/cbor/: mod.rs
src/webauthn/store/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/: Cargo.toml  meson.build
xyz-iinuwa-credential-manager-portal-gtk/data/: meson.build  xyz.iinuwa.CredentialManager.gschema.xml.in  xyz.iinuwa.CredentialManagerUi.desktop.in.in  xyz.iinuwa.CredentialManagerUi.metainfo.xml.in.in
xyz-iinuwa-credential-manager-portal-gtk/data/resources/: resources.gresource.xml
xyz-iinuwa-credential-manager-portal-gtk/data/resources/ui/: window.ui
xyz-iinuwa-credential-manager-portal-gtk/po/: POTFILES.in
xyz-iinuwa-credential-manager-portal-gtk/src/: application.rs  credential_service.rs  dbus.rs  main.rs  meson.build  store.rs  view_model.rs  webauthn.rs  window.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/: gtk.rs  mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/gtk/: credential.rs  device.rs  mod.rs
