[package]
name = "linux-webauthn-platform-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
authenticator = { path = "/home/isaiah/Development/rust/authenticator-rs" }
zbus = "3.13.1"
