[package]
name = "linux-webauthn-platform-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
authenticator = { path = "/home/isaiah/Development/rust/authenticator-rs" }
oo7 = "0.1.2"
ring = "0.16.20"
sha2 = "0.10.7"
zbus = "3.13.1"
