[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.2.0"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
qrcode = "0.13.0"

[build-dependencies]
glib-build-tools = "0.18.0"
