[package]
name = "xyz-iinuwa-credential-manager-portal-gtk"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
base64 = "0.21.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_6"] }
openssl = "0.10.63"
ring = "0.17.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3"
zbus = "5.5.0"
