[package]
name = "xyz-iinuwa-credential-manager-portal-gtk"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.13.0", features = ["unstable"] }
base64 = "0.22.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_6"] }
openssl = "0.10.70"
ring = "0.17.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = "0.3"
zbus = "5.5.0"
